ocultar secion para  navegar en ellas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+    <!-- Botones navegacion -->
     <div class="contenedor-estetica">
         <div class="imagen"></div>
         <div class="app">
@@ -20,12 +21,24 @@
                 <button type="button">Información Cliente</button>
                 <button type="button">Resumen</button>
             </nav>
-        </div>
-    </div>
-
+    
+     <!-- Botones navegacion -->
    
-
-
+            <!-- Contenido de app -->
+            <div class="seccion">
+                <h2>Servicios</h2>
+                <p class="text-center">Elige tus servicios a continuacion</p>
+            </div>
+            <div class="seccion">
+                <h2>Tus datos</h2>
+                <p>Tus datos y cita</p>
+            </div>
+            <div class="seccion">
+                <h2>Resumen</h2>
+                <p>Resumen</p>
+            </div>
+            <!-- Contenido de app -->
+        </div>
     </div>
 
     <script src="build/js/bundle.min.js"></script>
