Consultar servicios desde un .json con FETCH API

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <!-- Contenido de app -->
             <div class="seccion">
                 <h2>Servicios</h2>
-                <p class="text-center">Elige tus servicios a continuacion</p>
+                <p class="text-center">Elige tus servicios a continuación</p>
+                <div class="listado-servicios">
+                    
+                </div>
             </div>
             <div class="seccion">
                 <h2>Tus datos</h2>
