Creando el HTML con los datos del  .json

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="seccion">
                 <h2>Servicios</h2>
                 <p class="text-center">Elige tus servicios a continuación</p>
-                <div class="listado-servicios">
-                    
+                <div class="listado-servicios" id="servicios">
+
                 </div>
             </div>
             <div class="seccion">
