--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
                 <h1>App Peluqueria</h1>
             </header>
             <nav class="tabs">
-                <button type="button">Servicios</button>
-                <button type="button">Información Cliente</button>
-                <button type="button">Resumen</button>
+                <button type="button" data-paso="1">Servicios</button>
+                <button type="button" data-paso="2">Información Cliente</button>
+                <button type="button" data-paso="3">Resumen</button>
             </nav>
     
      <!-- Botones navegacion -->
    
             <!-- Contenido de app -->
-            <div class="seccion">
+            <div class="seccion" id="paso-1">
                 <h2>Servicios</h2>
                 <p class="text-center">Elige tus servicios a continuación</p>
                 <div class="listado-servicios" id="servicios">
 
                 </div>
             </div>
-            <div class="seccion">
+            <div class="seccion" id="paso-2">
                 <h2>Tus datos</h2>
                 <p>Tus datos y cita</p>
             </div>
-            <div class="seccion">
+            <div class="seccion" id="paso-3">
                 <h2>Resumen</h2>
                 <p>Resumen</p>
             </div>
