Primeros pasos para paginación

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <h2>Servicios</h2>
                 <p class="text-center">Elige tus servicios a continuación</p>
                 <div class="listado-servicios" id="servicios">
-
                 </div>
             </div>
             <div class="seccion" id="paso-2">
@@ -41,6 +40,15 @@
                 <p>Resumen</p>
             </div>
             <!-- Contenido de app -->
+            <div class="paginacion">
+                  <button id="anterior">
+                      &laquo;Anterior
+                  </button>  
+                  <button id="siguiente">
+                      siguiente &raquo;
+                  </button>
+            </div>
+            <!-- PAGINACION -->
         </div>
     </div>
 
