--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
                 </div>
             </div>
             <div class="seccion" id="paso-2">
-                <h2>Tus datos</h2>
-                <p>Tus datos y cita</p>
+                <h2>Tus datos y cita</h2>
+                <p class="text-center"> Coloca tus datos y fecha de tu cita</p>
+                <form class="formulario">
+                    <div class="campo">
+                        <label for="nombre">Nombre</label>
+                        <input id="nombre" type="text" placeholder="Tu Nombre">
+                    </div>
+
+                    <div class="campo">
+                        <label for="fecha">Fecha</label>
+                        <input id="fecha" type="date" >
+                    </div>
+
+                    <div class="campo">
+                        <label for="hora">Hora</label>
+                        <input id="hora" type="time" >
+                    </div>
+            
+                </form>
             </div>
             <div class="seccion" id="paso-3">
                 <h2>Resumen</h2>
