Validar campos vacios form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>App Salón de Belleza</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="build/css/app.css">
+
 </head>
 <body>
 
@@ -52,9 +53,9 @@
             
                 </form>
             </div>
-            <div class="seccion" id="paso-3">
+            <div class="seccion contenido-resumen" id="paso-3">
                 <h2>Resumen</h2>
-                <p>Resumen</p>
+                
             </div>
             <!-- Contenido de app -->
             <div class="paginacion">
